# cogrob-tut-hri

./: LICENSE  README.md  setup.py
cob_speech_synthesizer/: CMakeLists.txt  package.xml  setup.py
cob_speech_synthesizer/launch/: speech_synthesizer.launch
cob_speech_synthesizer/scripts/: speech_synthesizer_node.py
cob_speech_synthesizer/src/cob_speech_synthesizer/: speech_synthesizer.py
cogrob_tut_bringup/: CMakeLists.txt  package.xml
cogrob_tut_bringup/config/: base_configurations.yaml
cogrob_tut_bringup/launch/: robot.launch
cogrob_tut_hri/: CMakeLists.txt  package.xml
cogrob_tut_msgs/: CMakeLists.txt  package.xml
cogrob_tut_msgs/msg/: Action.msg  InfoSymbol.msg  Instruction.msg  Person.msg  Request.msg  Target.msg
cogrob_tut_msgs/srv/: identifyInterlocutor.srv  query.srv  retrieveActions.srv  retrievePeople.srv  retrieveRequests.srv  retrieveTargets.srv  submitRequest.srv
cogrob_tut_planning/: CMakeLists.txt  package.xml  setup.py
cogrob_tut_planning/launch/: planning.launch
cogrob_tut_planning/scripts/: planning_node.py
cogrob_tut_planning/src/cob_planning/: controller.py
cogrob_tut_reasoning/: CMakeLists.txt  package.xml  setup.py
cogrob_tut_reasoning/launch/: json.launch  reasoning.launch
cogrob_tut_reasoning/owl/: actions.owl  catalog-v001.xml  cob4-2.owl  humans.owl  ipa-apartment.owl  launch.owl  targets.owl
cogrob_tut_reasoning/prolog/: init.pl  reasoner.pl
cogrob_tut_reasoning/scripts/: reasoning_node.py
cogrob_tut_reasoning/src/cob_reasoning/: errors.py  grounding_action_server.py  model.py  prolog_interface.py  rospy_helper.py  test_reasoning.py  utils.py
cogrob_tut_speech_recognition/: CMakeLists.txt  package.xml  setup.py
cogrob_tut_speech_recognition/launch/: conversation.launch
cogrob_tut_speech_recognition/scripts/: speech_recognition_node.py  speech_to_text_node.py
cogrob_tut_speech_recognition/src/cob_speech_recognition/: rospy_helper.py  speech_recognition.py  state_machine.py
docs/: Makefile  conf.py  (+1 more)
franka_tut/: CMakeLists.txt  package.xml
franka_tut/config/: constants.yaml
franka_tut/launch/: bringup_franka.launch  franka_tut.launch
franka_tut_msgs/: CMakeLists.txt  package.xml
franka_tut_msgs/action/: AddInfoConversation.action  ExecuteTask.action  RecordMotion.action
franka_tut_msgs/msg/: Action.msg  Gripper.msg  Instructions.msg
franka_tut_reasoning/: CMakeLists.txt  package.xml  rosdoc.yaml  setup.py
franka_tut_reasoning/doc/: Makefile  conf.py  index.rst  make.bat  manifest.yaml  modules.rst
franka_tut_reasoning/doc/html/: ____init_____8py.html  ____init_____8py_source.html  annotated.html  classes.html  classfranka__tut__reasoning_1_1errors_1_1Error-members.html  classfranka__tut__reasoning_1_1errors_1_1Error.html  classfranka__tut__reasoning_1_1errors_1_1Error__inherit__graph.map  classfranka__tut__reasoning_1_1errors_1_1Error__inherit__graph.md5  classfranka__tut__reasoning_1_1errors_1_1Grasping__Error-members.html  classfranka__tut__reasoning_1_1errors_1_1Grasping__Error.html  classfranka__tut__reasoning_1_1errors_1_1Grasping__Error__inherit__graph.map  classfranka__tut__reasoning_1_1errors_1_1Grasping__Error__inherit__graph.md5  classfranka__tut__reasoning_1_1errors_1_1LocationUnknown__Error-members.html  classfranka__tut__reasoning_1_1errors_1_1LocationUnknown__Error.html  classfranka__tut__reasoning_1_1errors_1_1LocationUnknown__Error__inherit__graph.map  classfranka__tut__reasoning_1_1errors_1_1LocationUnknown__Error__inherit__graph.md5  classfranka__tut__reasoning_1_1errors_1_1RequestSemantic__Error-members.html  classfranka__tut__reasoning_1_1errors_1_1RequestSemantic__Error.html  classfranka__tut__reasoning_1_1errors_1_1RequestSemantic__Error__inherit__graph.map  classfranka__tut__reasoning_1_1errors_1_1RequestSemantic__Error__inherit__graph.md5  classfranka__tut__reasoning_1_1errors_1_1RequestSyntax__Error-members.html  classfranka__tut__reasoning_1_1errors_1_1RequestSyntax__Error.html  classfranka__tut__reasoning_1_1errors_1_1RequestSyntax__Error__inherit__graph.map  classfranka__tut__reasoning_1_1errors_1_1RequestSyntax__Error__inherit__graph.md5  classfranka__tut__reasoning_1_1errors_1_1TargetUnknown__Error-members.html  classfranka__tut__reasoning_1_1errors_1_1TargetUnknown__Error.html  classfranka__tut__reasoning_1_1errors_1_1TargetUnknown__Error__inherit__graph.map  classfranka__tut__reasoning_1_1errors_1_1TargetUnknown__Error__inherit__graph.md5  classfranka__tut__reasoning_1_1errors_1_1WidthUnknown__Error-members.html  classfranka__tut__reasoning_1_1errors_1_1WidthUnknown__Error.html  classfranka__tut__reasoning_1_1errors_1_1WidthUnknown__Error__inherit__graph.map  classfranka__tut__reasoning_1_1errors_1_1WidthUnknown__Error__inherit__graph.md5  classfranka__tut__reasoning_1_1grounding__action__server_1_1GroundingActionServer-members.html  classfranka__tut__reasoning_1_1grounding__action__server_1_1GroundingActionServer.html  classfranka__tut__reasoning_1_1grounding__action__server_1_1GroundingActionServer__inherit__graph.map  classfranka__tut__reasoning_1_1grounding__action__server_1_1GroundingActionServer__inherit__graph.md5  classfranka__tut__reasoning_1_1main_1_1Reasoning-members.html  classfranka__tut__reasoning_1_1main_1_1Reasoning.html  classfranka__tut__reasoning_1_1main_1_1Reasoning__inherit__graph.map  classfranka__tut__reasoning_1_1main_1_1Reasoning__inherit__graph.md5  (+104 more)
franka_tut_reasoning/launch/: reasoning_node.launch
franka_tut_reasoning/owl/: catalog-v001.xml
franka_tut_reasoning/scripts/: reasoning_node.py  record_motion_client.py
franka_tut_reasoning/src/franka_tut_reasoning/: errors.py  grounding_action_server.py  main.py  ontology_manager.py  planner.py  task_server.py
franka_tut_reasoning/test/: test_decision_making.py  test_rdf_manager.py
rqt_franka/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_franka/doc/: Makefile  conf.py  make.bat  manifest.yaml  modules.rst  rqt_franka.rst
rqt_franka/launch/: rqt_franka.launch
rqt_franka/resource/: button.ui  check_dialog.ui  gui.ui  main.ui
rqt_franka/scripts/: rqt_franka
(+156 files in other folders)
