<package format="2">
  <name>cob_speech_synthesizer</name>
  <version>0.1.0</version>
  <description>Speech commands of the robot.</description>

  <maintainer email="alexandre.angleraud@tut.fi">Alexandre Angleraud</maintainer>
  <license>BSD</license>
  <url type="website">http://Zorrander.github.io/cogrob_tut_hri</url>
  <url type="repository">https://github.com/Zorrander/cob_speech_synthesizer</url>
  <author>Cognitive Robotics TUT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rospy</depend>

  <exec_depend>cob_script_server</exec_depend>

</package>
