<?xml version="1.0"?>
<package format="2">
  <name>cogrob_tut_hri</name>
  <version>0.1.0</version>
  <description>
    cogrob_tut_hri is a metapackage for all packages in the scope of the thesis of Alexandre Angleraud
    from the Cognitive Robotics group in TUT.
  </description>
  <maintainer email="alexandre.angleraud@tut.fi">Alexandre Angleraud</maintainer>
  <license>BSD</license>

  <url type="website">http://Zorrander.github.io/cogrob_tut_hri</url>
  <url type="repository">https://github.com/Zorrander/cogrob_tut_hri</url>
  <author>Cognitive Robotics TUT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cogrob_tut_bringup</exec_depend>
  <exec_depend>cogrob_tut_msgs</exec_depend>
  <exec_depend>cogrob_tut_reasoning</exec_depend>
  <exec_depend>cogrob_tut_planning</exec_depend>
  <exec_depend>cogrob_tut_speech_recognition</exec_depend>
  <exec_depend>cob_speech_synthesizer</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
