<package format="2">

  <name>cogrob_tut_planning</name>
  <version>0.1.0</version>

  <description>Action commands of the robot</description>

  <maintainer email="alexandre.angleraud@tut.fi">Alexandre Angleraud</maintainer>
  <license>BSD</license>

  <url type="website">http://Zorrander.github.io/cogrob_tut_hri</url>
  <url type="repository">https://github.com/Zorrander/cogrob_tut_planning</url>
  <author>Cognitive Robotics TUT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
</package>
