<package format="2">
  <name>cogrob_tut_reasoning</name>
  <version>0.1.0</version>
  <description>Interactions with KB for reasoning and learning</description>

  <maintainer email="alexandre.angleraud@tut.fi">Alexandre Angleraud</maintainer>
  <license>BSD</license>

  <url type="website">http://Zorrander.github.io/cogrob_tut_hri</url>
  <url type="repository">https://github.com/Zorrander/cogrob_tut_reasoning</url>
  <author>Cognitive Robotics TUT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <exec_depend>cogrob_tut_msgs</exec_depend>
  <exec_depend>json_prolog</exec_depend>
  <exec_depend>knowrob_common</exec_depend>

</package>
