<package format="2">
  <name>cogrob_tut_speech_recognition</name>
  <version>0.1.0</version>
  <description>NLP for Human-Robot interaction.</description>

  <maintainer email="alexandre.angleraud@tut.fi">Alexandre Angleraud</maintainer>
  <license>BSD</license>
  <url type="website">http://Zorrander.github.io/cogrob_tut_hri</url>
  <url type="repository">https://github.com/Zorrander/cogrob_tut_speech_recognition</url>
  <author>Cognitive Robotics TUT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <exec_depend>cob_aalto_msgs</exec_depend>


</package>
