<?xml version="1.0"?>
<package format="2">
  <name>franka_tut_msgs</name>
  <version>0.1.0</version>
  <description>The franka_tut_msgs package</description>

  <maintainer email="alexandre.angleraud@tut.fi">Alexandre Angleraud</maintainer>

  <license>BSD</license>

  <url type="website">http://human-robot-interactive-learning.readthedocs.io</url>
  <url type="repository">https://github.com/Zorrander/franka_tut_msgs</url>

  <author>Cognitive Robotics TUT</author>

  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
