<?xml version="1.0"?>
<package format="2">
  <name>rqt_franka</name>
  <version>0.1.0</version>
  <description>Graphical user interface for the Panda platform</description>

  <maintainer email="alexandre.angleraud@tut.fi">Alexandre Angleraud</maintainer>
  <license>BSD</license>
  <url type="website">http://human-robot-interactive-learning.readthedocs.io</url>
  <url type="repository">https://github.com/Zorrander/rqt_franka</url>
  <author>Cognitive Robotics TUT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>


    <!-- Other tools can request additional information be placed here -->
    <export>
      <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
